--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "hotkeys-js": "^3.13.15",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
-    "next": "15.5.5",
+    "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
     "next-pwa": "^5.6.0",
     "next-themes": "^0.4.6",
     "openai": "^6.18.0",
     "prisma": "^6.17.1",
     "qrcode.js": "^0.0.1",
-    "react": "19.1.0",
+    "react": "^19.2.4",
     "react-confetti": "^6.4.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^19.2.4",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.65.0",
     "react-spring": "^10.0.3",
